[package]
name = "aoc_23"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "core",
    "day_1a",
    "day_1b",
    "day_2a",
    "day_2b",
    "day_3a",
    "day_3b",
]

[dependencies]
core = { path = "core" }
day_1a = { path = "day_1a" }
day_1b = { path = "day_1b" }
day_2a = { path = "day_2a" }
day_2b = { path = "day_2b" }
day_3a = { path = "day_3a" }
day_3b = { path = "day_3b" }
